# btmcs-backend

./: Cargo.toml  README.md  Rocket.toml
src/: emotedle.rs  main.rs  mcsr_deaths.rs  mcsr_stats.rs  osu.rs  seed.rs  twitch.rs
src/mcsr/: fetch.rs  match_data.rs  match_history.rs  mod.rs  profile_data.rs  utils.rs
src/mcsr_deaths/: match_data.rs  match_history.rs  profile_data.rs  seasons_data.rs
src/mcsr_stats/: match_data.rs  match_history.rs  seasons_data.rs
src/socials/: twitch.rs  twitter.rs  youtube.rs
src/twitch/: config.rs
