[package]
name = "btmcs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
cached = { version = "0.56.0", features = ["async"] }
chrono = "0.4.42"
image = { version = "0.25.8", features = ["default-formats"] }
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
rocket = {version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
rosu-v2 = "0.11.0"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.8"

[lints.clippy] # fuck you clippy
needless_return = "allow"
useless_format = "allow"
